--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "antd": "^3.19.5",
+    "axios": "^0.19.1",
     "dva": "^2.6.0-beta.6",
     "eject": "^0.0.4",
     "react": "^16.8.6",
